13 -14 position fixed z-index
trying to make the header fixed

--- a/PatiodeMolina/css/style.css
+++ b/PatiodeMolina/css/style.css
@@ -10,6 +10,8 @@ header {
     padding: 0;
     background-color: #e75771;
     opacity: 1;
+    position: fixed;
+    z-index: 1;
     
     }
 
